--- a/src/smt/CMakeLists.txt
+++ b/src/smt/CMakeLists.txt
@@ -77,7 +77,7 @@ z3_add_component(smt
     user_propagator.cpp
     uses_theory.cpp
     watch_list.cpp
-    theory_trau/theory_trau.cpp
+    theory_atlas/theory_atlas.cpp
   COMPONENT_DEPENDENCIES
     bit_blaster
     cmd_context
