updating parikh img

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,7 @@ add_subdirectory(tactic)
 add_subdirectory(ast/substitution)
 add_subdirectory(ast/euf)
 add_subdirectory(smt/params)
+add_subdirectory(smt/theory_atlas)
 add_subdirectory(parsers/util)
 add_subdirectory(math/grobner)
 add_subdirectory(sat)
